--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         .m{
             font-size: 25px;
         }
+        table ,th, td {
+
+            border: 1px solid;
+        }
         
     </style>
 </head>
@@ -41,7 +45,7 @@
    <span class="poc">I am an enthusiastic and a determinant girl.I am a quick learner and great team worker.</span>
    <hr size="4" color="black" margin="0px">
    <p class="puc"><b>EDUCATION</b></p>
-   <table class="u" border>
+   <table class="u" >
     <tr>
     <td>2018-2019</td>
     <td>10th class passed</td>
@@ -68,7 +72,7 @@
     <hr size="2" color="black">
     <hr>
     <p class="puc"><b>SKILLS</b></p>
-    <table class="u" border>
+    <table class="u" >
         <tr>
             <td>Maths&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="sta.png" alt="hi" width="20px"><img src="sta.png" alt="hi" width="20px"><img src="sta.png" alt="hi" width="20px"><img src="sta.png" alt="hi" width="20px"><img src="sta.png" alt="hi" width="20px"><br>
             Physics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="sta.png" alt="hi" width="20px"><img src="sta.png" alt="hi" width="20px"><img src="sta.png" alt="hi" width="20px"><img src="sta.png" alt="hi" width="20px"><img src="sta.png" alt="hi" width="20px"><br>
