--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 </p>
 <hr size="2" color="black">
-<a href="file:///C:/Users/Mack/Desktop/Project%20mycin/contact.html" style="font-size: 20px;" target="_blank">Contact me</a>
+<a href="contact.html" style="font-size: 20px;" target="_blank">Contact me</a>
     
     
 </body>
